--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www"
-
-
   },
   "dependencies": {
     "angular": "^1.6.1",
     "angular-ui-router": "^0.4.2",
+    "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
     "cookie-parser": "^1.4.3",
     "debug": "~2.6.0",
@@ -23,6 +22,7 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
     "pug": "~2.0.0-beta10",
+    "request": "^2.79.0",
     "serve-favicon": "^2.3.2"
   }
 }
